--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="high-score">
 
-        <label class="hidden score"> FOI BEM AMOR: TU GANHOU UM <img src="ticket.png" alt="ticket de nerd" width="100%" height="50%"> <span id="score"></span></label>
+        <label class="hidden score"> FOI BEM AMOR TU GANHOU UM: <img src="ticket.png" alt="ticket de nerd" width="100%" height="50%"> <span id="score"></span></label>
         <button id="restart" class="hidden" onclick="location.reload();">recomeçar lel</button>
 
 
